исправление №2